--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mydiscordbot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Discord bot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "@matheusjimenez",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
